# MelonCompat

./: .gitignore  LICENSE  MelonLoader.BepInExCompat.Mono.csproj  MelonLoader.BepInExCompat.csproj  NullableAttributes.cs  README.md  RoseMod.DevKit.csproj
RoseMod/DevKit/: RoseConfig.cs  RoseEnvironment.cs  RoseEventBus.cs  RoseLoaderKind.cs  RoseLogging.cs  RoseModBase.cs  RoseModContext.cs  RoseModEntry.cs  RoseModHost.cs  RoseModMetadata.cs  RoseServices.cs
RoseV/: README.md
RoseV/IDE/: build_pyqt_exe.ps1  package.json  rosev_ide.py  run_rosev_ide.bat
RoseV/IDE/scripts/: build-frontend.js  preview.js
RoseV/IDE/src/: index.html  renderer.js  styles.css
RoseV/IDE/src-tauri/: Cargo.toml  tauri.conf.json
RoseV/IDE/src-tauri/src/: main.rs
RoseV/Native/: RoseV.Native.vcxproj
RoseV/Native/include/: rosev_compiler.h  rosev_lexer.h
RoseV/Native/src/: main.cpp  rosev_compiler.cpp  rosev_hash.asm  rosev_lexer.c
Samples/RoseV/: FriendIntro.rosev  README.md  RoseVGeneratedSample.csproj  UniversalEverything.rosev
Samples/UniversalCSharp/: README.md  UniversalCSharpSample.csproj  UniversalEverythingEntryPoints.cs  UniversalEverythingMod.cs
buildTransitive/: RoseMod.DevKit.LoaderAdapters.cs  RoseMod.DevKit.targets
docs/wiki/: Build-Guide.md  Built-Version-Walkthrough.md  Compatibility-Acceptance-Checks.md  DevKit-Setup-and-Usage.md  Full-Bug-History.md  Home.md  Installer-and-Build-Bug-History.md  README.md  RoseV-Build-Flow.md  RoseV-IDE.md  RoseV-Language.md  Runtime-Bug-Deep-Dives.md  Source-Code-Walkthrough.md  _Sidebar.md
(+5 files in other folders)
